# learning_opengl

./: .gitignore  CMakeLists.txt  flake.nix
.cache/clangd/index/: main.cpp.AAE4D3EA978FCEB0.idx
src/: checkOpenglCompileErrors.h  fragShader1.frag  load_file_to_string.h  main.cpp  main_demo.cpp  my_OpenGL_utills.h  shader_class.h  vertexShader1.vert
